# POS

./: Makefile.am  aclocal.m4  config.h.in  configure  configure.ac  libtool
BuildData/: Makefile.am
BuildScripts/: Makefile.am  tcl2dox.kit  tcl2dox.tcl  tcldoxyfilter.sh  tcldoxyfilter.sh.in
Doc/: Makefile.am
Scripts/: DWSLogo.tcl  DWSLogo.xbm  IconsAndImages.tcl  Makefile.am  POS.tcl  Paypal.tcl  SnitReceiptPrinter.tcl  Swipe.tcl  mainwindow.tcl  receiptPrinter.tcl  snitLFs.tcl  snitdialog.tcl
SwipeHID/: Makefile.am  TclSwipeReader.c  TclSwipeReader.i  swipeevent.c  swipetest.c
m4/: ax_tcl_libraries.m4  tls.m4
