##-*- makefile -*-############################################################
#
#  System        : 
#  Module        : 
#  Object Name   : $RCSfile$
#  Revision      : $Revision$
#  Date          : $Date$
#  Author        : $Author$
#  Created By    : Robert Heller
#  Created       : Sat Dec 23 10:40:52 2017
#  Last Modified : <171223.1044>
#
#  Description	
#
#  Notes
#
#  History
#	
#  $Log$
#
##############################################################################
#
#    Copyright (C) 2017  Robert Heller D/B/A Deepwoods Software
#			51 Locke Hill Road
#			Wendell, MA 01379-9728
#
#    This program is free software; you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation; either version 2 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program; if not, write to the Free Software
#    Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#
# 
#
##############################################################################


EXTRA_DIST =  AddKitDir.kit AddKitDir.tcl AddKitFile.kit AddKitFile.tcl \
              generateLib_pkgIndex.sh generateLib_pkgIndex.tcl \
              MakePkgIndex.kit MakePkgIndex.tcl MakeVersionHelp.kit \
              MakeVersionHelp.tcl MakeVersion.kit MakeVersion.tcl sdx.kit \
              SwigInternalsBook.tcl tcl2dox.kit tcl2dox.tcl \
              tcldoxyfilter.sh.in versioninfo2libversion.tcl

KITFILES = AddKitDir.kit AddKitFile.kit MakePkgIndex.kit sdx.kit tcl2dox.kit

noinst_SCRIPTS = $(KITFILES)

