##-*- makefile -*-############################################################
#
#  System        : 
#  Module        : 
#  Object Name   : $RCSfile$
#  Revision      : $Revision$
#  Date          : $Date$
#  Author        : $Author$
#  Created By    : Robert Heller
#  Created       : Sat Dec 23 11:01:40 2017
#  Last Modified : <180104.2223>
#
#  Description	
#
#  Notes
#
#  History
#	
#  $Log$
#
##############################################################################
#
#    Copyright (C) 2017  Robert Heller D/B/A Deepwoods Software
#			51 Locke Hill Road
#			Wendell, MA 01379-9728
#
#    This program is free software; you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation; either version 2 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program; if not, write to the Free Software
#    Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#
# 
#
##############################################################################


EXTRA_DIST = POS.tcl IconsAndImages.tcl mainwindow.tcl panedw.tcl ParseXML.tcl \
	     ReadConfiguration.tcl snitbuttonbox.tcl snitdialog.tcl \
	     snitHTMLHelp.tcl snitLFs.tcl snitlistbox.tcl snitmainframe.tcl \
	     snitpagesmanager.tcl snitrotext.tcl snitscrollableframe.tcl \
	     snitscrollw.tcl snitStdMenuBar.tcl splash.tcl close.gif \
	     DeepwoodsBanner.gif new.gif open.gif print.gif save.gif \
	     openfold.png palette.png gray50.xbm info.xbm questhead.xbm \
	     unknown.xpm gettext.tcl DynamicHelp.tcl ParseXML.tcl \
	     ReadConfiguration.tcl Paypal.tcl Swipe.tcl receiptPrinter.tcl \
	     largeHeader.png SnitReceiptPrinter.tcl

